2023-09-21  Georg-Johann Lay  <avr@gjlay.de>

Read note section .note.gnu.avr.deviceinfo and info therein like flash size.

	* avrtest.c (get_mem): Allow for avrtest.
	* load-flash.c (Elf32_Nhdr, avr_deviceinfo_t): New typedefs.
	(NOTE_AVR_DEVICEINFO): Define to ".note.gnu.avr.deviceinfo".
	(have_strtab, have_deviceinfo, avr_deviceinfo, avr_devicename)
	(decode_avr_deviceinfo): New static vars.
	(load_symbol_table, load_string_table, load_deviceinfo_note)
	(decode_avr_deviceinfo): New stati static functions.
	(load_sections): Renamed from load_symbol_string_table, relevant
	parts out-sourced to the new functions above.
	(load_elf): Always run load_sections(), but only load symtab if
	is_avrtest_log.  Postpone check_arch() until after deviceinfo note
	has been read.
	(check_arch): If available, print MCU name in diagnostics.

2023-05-28  Georg-Johann Lay  <avr@gjlay.de>

Ignore some labels with non-printable characters in them.

	* logging.c (log_set_function_symbol): Ignore symbols like "L0^A".

2023-05-26  Georg-Johann Lay  <avr@gjlay.de>

Support a new syscall avrtest_abort_2nd_hit() that calls abort if
it is executed more than once.  This is useful for programs that go
haywire and execute startup code more than once.  The startup code in
dejagnuboards/exit.c now calls this syscall.

	* avrtest.c (sys_abort_2nd_hit): New static function.
	(func_SYSCALL) [sysno=25]: Call it.
	* acrtest.h (avr_syscall_25, avrtest_abort_2nd_hit): New static
	inline functions.
	[assembler] <AVRTEST_ABORT_2ND_HIT>: New define.
	* dejagnuboards/exit.c (avrtest_init_argc_argv): Call
	avrtest_abort_2nd_hit.

2023-05-26  Georg-Johann Lay  <avr@gjlay.de>

Add command line option -s SIZE to specify the size of the
simulated program memory.  The value is used when the program
counter needs wrap-around.  SIZE must be a power of 2.

	* testavr.h (program_t) [max_pc, pc_mask]: New fields.
	* options.def (-s): New option.
	* options.c (USAGE) [-s SIZE]: Document.