@@ -3,7 +3,10 @@
                           avrtest NEWS
                           ============
 
-* Support -mmcu=avrxmega4 for XMEGA devices with           r311  2023-09-21
+* Support logging of values (syscalls 7 and 8) also        r335  2023-09-23
+  in avrtest.
+
+* Support -mmcu=avrxmega4 for XMEGA devices with           r331  2023-09-21
   a 2-byte PC and with .rodata in RAM.
 
 * Calls like fputc (c, stderr) now write to the            r326  2023-09-12
